bootstrap/argo-cd/argowf-argocd-dex-handling.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
spec:
  template:
    spec:
      containers:
        - name: dex
          image:
            repository: ghcr.io/dexidp/dex
            tag: v2.36.0
